[package]
name = "hmac"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
hmac = "0.12.1"
sha2 = "0.10"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
  "console"
]


